--- a/html/index.html
+++ b/html/index.html
@@ -63,7 +63,7 @@ weight: 0
         <div class="specials__tile col-sm-6 col-md-4 col-md-offset-2">
           <div>
             <h3 class="font-accent-purple font-weight-bold">Children's New Patient Dental&nbsp;Exam</h3>
-            <h2 class="font-accent-purple">$75</h2>
+            <p class="font-accent-purple font-weight-bold font-size-huge font-decoration-dollar margin-none">75</p>
             <p>Save $57</p>
             <p>Patients 12 and under receive a professional dental cleaning, fluoride treatment, needed x‑rays, and a
               comprehensive exam.</p>
@@ -73,7 +73,7 @@ weight: 0
         <div class="specials__tile col-sm-6 col-md-4">
           <div>
             <h3 class="font-accent-purple font-weight-bold">Children's Dental Cleaning&nbsp;and&nbsp;Fluoride</h3>
-            <h2 class="font-accent-purple">$45</h2>
+            <p class="font-accent-purple font-weight-bold font-size-huge font-decoration-dollar margin-none">45</p>
             <p>Save $52</p>
             <p>Patients 12 and under receive a professional dental cleaning and topical varnish application. A new patient dental exam is required.</p>
             <p>(D1120, D1208)</p>
@@ -82,13 +82,13 @@ weight: 0
       </div>
       <div class="row row-height-wrapper">
         <div class="specials__tile col-sm-6 col-md-4 col-md-offset-2">
-          <h2 class="font-accent-purple font-weight-bold">FREE</h2>
-          <h3 class="font-accent-purple">Prenatal Consultation</h3>
+          <h2 class="font-accent-purple font-weight-bold font-size-huge">FREE</h2>
+          <h3 class="font-accent-purple font-weight-bold">Prenatal Consultation</h3>
           <p>Expecting parents are encouraged to call us for a brief consultation regarding infant dental care and what to expect in the early years.</p>
         </div>
         <div class="specials__tile col-sm-6 col-md-4">
-          <h2 class="font-accent-purple font-weight-bold">FREE</h2>
-          <h3 class="font-accent-purple">Children Under Two</h3>
+          <h2 class="font-accent-purple font-weight-bold font-size-huge">FREE</h2>
+          <h3 class="font-accent-purple font-weight-bold">Children Under Two</h3>
           <p>Bring your child in before his or her second birthday for a free exam and oral hygiene instruction.</p>
         </div>
       </div>
