set up scripts to move vendor resources into css build directory

--- a/html/team.html
+++ b/html/team.html
@@ -86,49 +86,49 @@ weight: 1
                 <div class="team-slider">
                     <div class="team-member">
                         <a href="#" data-toggle="modal" data-target="#adam">
-                            <img src="images/bios/adam-bio.jpg" alt="adam">
+                            <div class="img-container"><img src="images/bios/adam-bio.jpg" alt="adam"></div>
                             <h4 class="font-accent-dark-purple font-weight-bold">Adam Ramirez</h4>
                         </a>
                     </div>
                     <div class="team-member">
                         <a href="#" data-toggle="modal" data-target="#berman">
-                            <img src="images/bios/berman-bio.jpg" alt="berman">
+                            <div class="img-container"><img src="images/bios/berman-bio.jpg" alt="berman"></div>
                             <h4 class="font-accent-dark-purple font-weight-bold">Dr. Marvin Berman</h4>
                         </a>
                     </div>
                     <div class="team-member">
                         <a href="#" data-toggle="modal" data-target="#cassidy">
-                            <img src="images/bios/cassidy-bio.jpg" alt="cassidy">
+                            <div class="img-container"><img src="images/bios/cassidy-bio.jpg" alt="cassidy"></div>
                             <h4 class="font-accent-dark-purple font-weight-bold">Cassidy Johnson</h4>
                         </a>
                     </div>
                     <div class="team-member">
                         <a href="#" data-toggle="modal" data-target="#deneaqua">
-                            <img src="images/bios/deneaqua-bio.jpg" alt="deneaqua">
+                            <div class="img-container"><img src="images/bios/deneaqua-bio.jpg" alt="deneaqua"></div>
                             <h4 class="font-accent-dark-purple font-weight-bold">Deneaqua Brown</h4>
                         </a>
                     </div>
                     <div class="team-member">
                         <a href="#" data-toggle="modal" data-target="#letticia">
-                            <img src="images/bios/letticia-bio.jpg" alt="letticia">
+                            <div class="img-container"><img src="images/bios/letticia-bio.jpg" alt="letticia"></div>
                             <h4 class="font-accent-dark-purple font-weight-bold">Letticia Chavez</h4>
                         </a>
                     </div>
                     <div class="team-member">
                         <a href="#" data-toggle="modal" data-target="#marisela">
-                            <img src="images/bios/marisela.jpg" alt="marisela">
+                            <div class="img-container"><img src="images/bios/marisela.jpg" alt="marisela"></div>
                             <h4 class="font-accent-dark-purple font-weight-bold">Marisela Paz</h4>
                         </a>
                     </div>
                     <div class="team-member">
                         <a href="#" data-toggle="modal" data-target="#michael">
-                            <img src="images/bios/michael-bio.jpg" alt="michael">
+                            <div class="img-container"><img src="images/bios/michael-bio.jpg" alt="michael"></div>
                             <h4 class="font-accent-dark-purple font-weight-bold">Michael Cruz</h4>
                         </a>
                     </div>
                     <div class="team-member">
                         <a href="#" data-toggle="modal" data-target="#tanisha">
-                            <img src="images/bios/tanisha-bio.jpg" alt="tanisha">
+                            <div class="img-container"><img src="images/bios/tanisha-bio.jpg" alt="tanisha"></div>
                             <h4 class="font-accent-dark-purple font-weight-bold">Tanisha Blanch</h4>
                         </a>
                     </div>
