--- a/html/patients.html
+++ b/html/patients.html
@@ -45,7 +45,7 @@ weight: 2
     <section class="qa clearfix section-margins section-padding background-light-green">
         <div class="qa__wrapper">
             <div class="heading qa__heading">
-                <h1>Parent Questions  & Answers</h1>
+                <h1>Parent Questions  &&nbsp;Answers</h1>
             </div>
         </div>
 
