--- a/html/contact.html
+++ b/html/contact.html
@@ -38,7 +38,7 @@ weight: 5
                 </div>
                 <div class="col-md-4 col-sm-6 center">
                     <h5 class="location__phone--byline" >New Patient Hotline</h5>
-                    <h3 class="font-accent-purple location__phone--big">{{ site.data.content.contact.phone-new }}</h3>
+                    <h3 class="font-accent-purple location__phone--big pad-bottom">{{ site.data.content.contact.phone-new }}</h3>
                     <h5 class="location__phone--byline" >Existing Patient Hotline</h5>
                     <h4 class="font-accent-purple location__phone--small">{{ site.data.content.contact.phone-existing }}</h4>
                 </div>
@@ -81,8 +81,8 @@ weight: 5
 
     <section class="hipaa background-light-purple section-margins pad-vert">
         <div class="hipaa__wrapper container clearfix center">
-            <p>This form, <strong>Notice of Privacy Practices</strong>, presents the information that federal law requires us to give our
-                patients regarding our privacy practices.</p>
+            <p class="font-size-tiny">This form, <strong>Notice of Privacy Practices</strong>, presents the information that federal law requires us to give our
+                patients regarding our privacy&nbsp;practices.</p>
             <a target="_blank" href="hipaa-notice.pdf">HIPAA Notice</a>
         </div>
     </section>
