--- a/html/services.html
+++ b/html/services.html
@@ -40,19 +40,19 @@ weight: 3
 
                 <a href="#" data-toggle="modal" data-target="#Infant" class="read-more">
                     <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/frenectomy.jpg" alt="">
-                        <h6>Infant Frenectomy</h6>
+                        <h6 class="font-weight-bold">Infant Frenectomy</h6>
                     </div>
                 </a>
 
                 <a href="#" data-toggle="modal" data-target="#Fillings" class="read-more">
                     <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/fillings.jpg" alt="">
-                        <h6>Fillings</h6>
+                        <h6 class="font-weight-bold">Fillings</h6>
                     </div>
                 </a>
 
                 <a href="#" data-toggle="modal" data-target="#Crowns" class="read-more">
                     <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/crowns.jpg" alt="">
-                        <h6>Crowns</h6>
+                        <h6 class="font-weight-bold">Crowns</h6>
                     </div>
                 </a>
 
@@ -62,17 +62,17 @@ weight: 3
 
                 <a href="#" data-toggle="modal" data-target="#Space" class="read-more">
                     <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/space-maintainers.jpg" alt="">
-                        <h6>Space Maintainers</h6>
+                        <h6 class="font-weight-bold">Space Maintainers</h6>
                     </div>
                 </a>
                 <a href="#" data-toggle="modal" data-target="#Mouth" class="read-more">
                     <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/mouth-guards.jpg" alt="">
-                        <h6>Mouth Guards</h6>
+                        <h6 class="font-weight-bold">Mouth Guards</h6>
                     </div>
                 </a>
                 <a href="#" data-toggle="modal" data-target="#Pulpotomy" class="read-more">
                     <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/pulpotomy.jpg" alt="">
-                        <h6>Pulpotomy (Baby Root Canal)</h6>
+                        <h6 class="font-weight-bold">Pulpotomy (Baby Root Canal)</h6>
                     </div>
                 </a>
             </div>
@@ -80,17 +80,17 @@ weight: 3
             <div class="row">
                 <a href="#" data-toggle="modal" data-target="#Orthodontic" class="read-more">
                     <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/child-orthodontics.jpg" alt="">
-                        <h6>Orthodontic Treatment</h6>
+                        <h6 class="font-weight-bold">Orthodontic Treatment</h6>
                     </div>
                 </a>
                 <a href="#" data-toggle="modal" data-target="#Sealants" class="read-more">
                     <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/sealants.jpg" alt="">
-                        <h6>Sealants</h6>
+                        <h6 class="font-weight-bold">Sealants</h6>
                     </div>
                 </a>
                 <a href="#" data-toggle="modal" data-target="#Digital" class="read-more">
                     <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/digital-xrays.jpg" alt="">
-                        <h6>Digital x-Rays</h6>
+                        <h6 class="font-weight-bold">Digital x-Rays</h6>
                     </div>
                 </a>
             </div>
