add updated js for the form

--- a/html/team.html
+++ b/html/team.html
@@ -116,7 +116,7 @@ weight: 1
                     </div>
                     <div class="team-member">
                         <a href="#" data-toggle="modal" data-target="#marisela">
-                            <div class="img-container"><img src="images/bios/marisela.jpg" alt="marisela"></div>
+                            <div class="img-container"><img src="images/bios/marisela-bio.jpg" alt="marisela"></div>
                             <h4 class="font-accent-dark-purple font-weight-bold">Marisela Paz</h4>
                         </a>
                     </div>
