add link to logo images

--- a/html/contact.html
+++ b/html/contact.html
@@ -33,7 +33,7 @@ weight: 5
 
             <div class="row location__content">
                 <div class="col-md-4 col-sm-6 center">
-                    <img class="contact-logo" src="images/horizontal-logo.png" alt="Denistry for Kids Logo">
+                    <a href="index.html"><img class="contact-logo" src="images/horizontal-logo.png" alt="Denistry for Kids Logo"></a>
                     <h6 class="location__address" >4801 West Peterson, Suite 410 <br>Chicago, IL 60646</h6>
                 </div>
                 <div class="col-md-4 col-sm-6 center">
