--- a/html/services.html
+++ b/html/services.html
@@ -129,7 +129,7 @@ weight: 3
 
         {% for item in site.data.services.items %}
 
-        <div class="modal fade" id="{{ item.modalId }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade" id="{{ item.modalId }}" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-body">
                     <div class="modal-content">
