--- a/html/team.html
+++ b/html/team.html
@@ -146,7 +146,7 @@ weight: 1
 
         {% for item in site.data.team.items %}
 
-        <div class="modal fade" id="{{ item.modalId }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade" id="{{ item.modalId }}" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-body">
                     <div class="modal-content">
