several small fixes from client review, typos

--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,7 @@ weight: 0
               <h3 class="font-accent-purple">What is a Pediatric Dentist?</h3>
               <p>Pediatric dentists have an additional 2-3 years of training to learn how to deal with the behavioral
                 aspects of children, how to make them feel comfortable, and to make the experience pleasant in addition to
-                clinical techniques specific to children. <span class="font--highlight">We are especially trained and qualified to treat patients with
+                clinical techniques specific to children. <span class="font--highlight">We are specially trained and qualified to treat patients with
               special needs.</span></p>
               <a class="font-accent-purple" href="patients.html#">Read More</a>
             </div>
