--- a/html/services.html
+++ b/html/services.html
@@ -39,19 +39,28 @@ weight: 3
             <div class="row">
 
                 <a href="#" data-toggle="modal" data-target="#Infant" class="read-more">
-                    <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/frenectomy.jpg" alt="">
+                    <div class="center col-sm-4 services__tile">
+                        <div class="services__image__container">
+                            <img class="services__image" src="images/services/frenectomy.jpg" alt="dental services">
+                        </div>
                         <h6 class="font-weight-bold">Infant Frenectomy</h6>
                     </div>
                 </a>
 
                 <a href="#" data-toggle="modal" data-target="#Fillings" class="read-more">
-                    <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/fillings.jpg" alt="">
+                    <div class="center col-sm-4 services__tile">
+                        <div class="services__image__container">
+                            <img class="services__image" src="images/services/fillings.jpg" alt="dental services">
+                        </div>
                         <h6 class="font-weight-bold">Fillings</h6>
                     </div>
                 </a>
 
                 <a href="#" data-toggle="modal" data-target="#Crowns" class="read-more">
-                    <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/crowns.jpg" alt="">
+                    <div class="center col-sm-4 services__tile">
+                        <div class="services__image__container">
+                            <img class="services__image" src="images/services/crowns.jpg" alt="dental services">
+                        </div>
                         <h6 class="font-weight-bold">Crowns</h6>
                     </div>
                 </a>
@@ -61,17 +70,26 @@ weight: 3
             <div class="row">
 
                 <a href="#" data-toggle="modal" data-target="#Space" class="read-more">
-                    <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/space-maintainers.jpg" alt="">
+                    <div class="center col-sm-4 services__tile">
+                        <div class="services__image__container">
+                            <img class="services__image" src="images/services/space-maintainers.jpg" alt="dental services">
+                        </div>
                         <h6 class="font-weight-bold">Space Maintainers</h6>
                     </div>
                 </a>
                 <a href="#" data-toggle="modal" data-target="#Mouth" class="read-more">
-                    <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/mouth-guards.jpg" alt="">
+                    <div class="center col-sm-4 services__tile">
+                        <div class="services__image__container">
+                            <img class="services__image" src="images/services/mouth-guards.jpg" alt="dental services">
+                        </div>
                         <h6 class="font-weight-bold">Mouth Guards</h6>
                     </div>
                 </a>
                 <a href="#" data-toggle="modal" data-target="#Pulpotomy" class="read-more">
-                    <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/pulpotomy.jpg" alt="">
+                    <div class="center col-sm-4 services__tile">
+                        <div class="services__image__container">
+                            <img class="services__image" src="images/services/pulpotomy.jpg" alt="dental services">
+                        </div>
                         <h6 class="font-weight-bold">Pulpotomy (Baby Root Canal)</h6>
                     </div>
                 </a>
@@ -79,17 +97,26 @@ weight: 3
             <hr>
             <div class="row">
                 <a href="#" data-toggle="modal" data-target="#Orthodontic" class="read-more">
-                    <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/child-orthodontics.jpg" alt="">
+                    <div class="center col-sm-4 services__tile">
+                        <div class="services__image__container">
+                            <img class="services__image" src="images/services/child-orthodontics.jpg" alt="dental services">
+                        </div>
                         <h6 class="font-weight-bold">Orthodontic Treatment</h6>
                     </div>
                 </a>
                 <a href="#" data-toggle="modal" data-target="#Sealants" class="read-more">
-                    <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/sealants.jpg" alt="">
+                    <div class="center col-sm-4 services__tile">
+                        <div class="services__image__container">
+                            <img class="services__image" src="images/services/sealants.jpg" alt="dental services">
+                        </div>
                         <h6 class="font-weight-bold">Sealants</h6>
                     </div>
                 </a>
                 <a href="#" data-toggle="modal" data-target="#Digital" class="read-more">
-                    <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/digital-xrays.jpg" alt="">
+                    <div class="center col-sm-4 services__tile">
+                        <div class="services__image__container">
+                            <img class="services__image" src="images/services/digital-xrays.jpg" alt="dental services">
+                        </div>
                         <h6 class="font-weight-bold">Digital x-Rays</h6>
                     </div>
                 </a>
