--- a/html/services.html
+++ b/html/services.html
@@ -34,7 +34,9 @@ weight: 3
         <div class="services__content clearfix">
             <div class="heading services__heading">
                 <h1>Pediatric Services</h1>
+                <h3>Select a service to find out more.</h3>
             </div>
+
 
             <div class="row">
 
